--- a/style.css
+++ b/style.css
@@ -2,22 +2,28 @@ body{
     font-family: "Poppins", sans-serif;
 }
 
+#header{
+    height:595px;
+    width: 100%;
+    background-image: url("images/header-bg.png");
+    background-size: 100% 100%;
+   
+   
+}
 .half-width{
     width: 40%;
+    margin-top: 4%;
     float: left;
-    margin-top: 5%;
 }
-
-
 .text{
     margin-left: 15%;
     margin-top: 15%;
 }
-.name{
+.jack{
     color:rgb(246, 3, 132) ;
-   font-size: 50px;
+    font-size: 50px;
 }
-.text-padding{
+.text-margin{
     margin: 2px;
 }
 .paragraph{
@@ -35,8 +41,6 @@ body{
     background-image: linear-gradient(90deg,rgb(250, 78, 172),rgb(246, 3, 132));
     
 }
-
-
 .half-width img{
     width: 90%;
     height: 500px;
