--- a/style.css
+++ b/style.css
@@ -3,13 +3,12 @@ body{
 }
 
 #header{
+    background-image: url("images/header-bg.png");
     height:595px;
     width: 100%;
-    background-image: url("images/header-bg.png");
     background-size: 100% 100%;
-   
-   
 }
+
 .half-width{
     width: 40%;
     margin-top: 4%;
@@ -19,14 +18,15 @@ body{
     margin-left: 15%;
     margin-top: 15%;
 }
-.jack{
-    color:rgb(246, 3, 132) ;
+.Jack{
+    color: rgb(245, 7, 146);
     font-size: 50px;
+
 }
-.text-margin{
+.title.text-margin{
     margin: 2px;
 }
-.paragraph{
+.header-paragraph{
     margin-top: 25px;
     color: gray;
     margin-bottom: 40px;
@@ -44,4 +44,106 @@ body{
 .half-width img{
     width: 90%;
     height: 500px;
+}
+
+.biography-text{
+    margin-left: 120px;
+    margin-top: 200px;
+    text-align: justify;
+}
+.biography-anchor{
+    text-decoration: none;
+    border-radius: 9px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 40px;
+    background-image: linear-gradient(90deg,rgb(250, 78, 172),rgb(246, 3, 132));
+}
+.biography-paragraph{
+    margin-bottom: 30px;
+    color: gray;
+}
+#bio-img{
+    height: 560px;
+    margin-top: 6px;
+    margin-left: 40px;
+    height: 100%;
+    
+}
+
+#biography{
+    margin-top: 2px;
+    width: 100%;
+    height: 600px;
+    background-image: url("images/biography-bg.png");
+    background-size: 100% 600px;
+   
+}
+
+.all-work-img{
+    height: 500px;
+    width: 100%;
+    display: flex;
+   justify-content: center;
+}
+.all-work-img img{
+    height:200px ;
+    width: 300px;
+    margin: 20px;
+    margin-top: 140px;
+}
+.latest-work-text{
+    text-align: center;
+    font-size: 40px;
+    font-weight: 100px;
+    text-shadow: 10px gray 40px;
+}
+.latest-work{
+    background-image: url("images/latest-work-bg.png");
+    background-size: 100% 500px;
+}
+
+.footer-banner{
+    text-align: center;
+    width: 100%;
+    height: 580px;
+    background-image: url("images/footer-bg.png");
+    background-size: 100% 580px;
+}
+.footer-paragraph{
+    width: 50%;
+    text-align: justify;
+    margin-left: 400px;
+}
+.bruce{
+    margin-top: 60px;
+   margin-bottom: 2px;
+}
+.founder{
+   color: gray;
+  margin-top: 2px;
+  margin-bottom: 30px;
+}
+#footer-anchor{
+    text-decoration: none;
+    border-radius: 9px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 270px;
+   margin-top: 60px;
+    width: 900px;
+    padding: 5px 20px;
+    background-image: linear-gradient(90deg,rgb(250, 78, 172),rgb(246, 3, 132));
+}
+#message{
+    font-weight: normal;
+    color: aliceblue;
+}
+
+footer{
+    color: gray;
+    font-size: 12px;
+    text-align: center;
 }
